@@ -1,14 +1,10 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /src
-WORKDIR /src
-RUN gradle build --no-daemon 
-
-FROM openjdk:8-jre-slim
+FROM openjdk:8-jre-alpine
 
 EXPOSE 8080
 
-RUN mkdir /app
+RUN mkdir /usr/app/ 
 
-COPY --from=build /src/build/libs/*.jar /app/spring-boot-application.jar
+COPY ./build/libs/my-app-1.0-SNAPSHOT.jar /usr/app/
+WORKDIR /usr/app
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-jar", "my-app-1.0-SNAPSHOT.jar"]
